--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,5 @@
 - if current_user
   Welcome #{current_user.name}
+  = link_to 'Logoff', signout_path
 - else
   = link_to 'Sign in with Github', '/auth/github'
