--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,10 +3,18 @@
   %head
     %meta{ content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type' }
     %title Imperium
+    = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en'
+    = stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons'
+    = stylesheet_link_tag 'https://code.getmdl.io/1.1.2/material.indigo-pink.min.css'
     = stylesheet_link_tag 'application',
       media: 'all',
       'data-turbolinks-track' => true
+    = javascript_include_tag 'https://code.getmdl.io/1.1.2/material.min.js'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    = yield
+    .demo-layout.mdl-layout.mdl-js-layout.mdl-layout--fixed-drawer.mdl-layout--fixed-header
+      = render partial: 'header'
+      = render partial: 'menu'
+      %main.mdl-layout__content.mdl-color--grey-100
+        = yield
